--- a/site/html/contacts.html
+++ b/site/html/contacts.html
@@ -31,7 +31,7 @@
 <a id="tel" href="tel:+33680343136">Téléphoner</a>
 <br>
 <br>
-<a id="mail" href="mailto:matthieu.tran@cpe.fr?subject=Demande de renseignement">Envoyer un mail</a>
+<a id="mail" href="mailto:matthieu.tran@cpe.fr?subject=Demande_de_renseignement">Envoyer un mail</a>
 </div><br>
 <br><br><br>
 <footer>
