--- a/site/html/contacts.html
+++ b/site/html/contacts.html
@@ -6,6 +6,7 @@
     <title>infos</title>
     <link rel="stylesheet" href="/site/css/destinations.css">
     <link rel="stylesheet" href="/site/css/contacts.css">
+    
 </head>
 
 <body>
@@ -46,5 +47,6 @@
     </nav>
     </div>
 </footer>
+<script src="../JS/destinations.js"></script>
 </body>
 </html>
