--- a/site/html/index.html
+++ b/site/html/index.html
@@ -15,7 +15,7 @@
         <div>
             <a id="logo" href="index.html"><img src="../images/logorv.jpg" alt="Rocket Voyage"></a>
         </div>
-        <h1 id="titre">Bienvenue sur RocketVoyage! Vers quel pays aller vous décoller?</h1>
+        <h1 id="titre">Bienvenue sur RocketVoyage! Vers quel pays allez vous décoller?</h1>
         <a id="inscrire" href="inscription.html">S'inscrire</a>
         <a id="connexion" href="connexion.html" >Se connecter</a>
         <a href="panier.html"><img src="../images/panier.webp"  height="50" width="75" alt="panier"></a>
