--- a/site/html/formulaire.html
+++ b/site/html/formulaire.html
@@ -77,7 +77,7 @@
         <span id="pasConnect"></span>
         <input id="reserver" type="submit"  value="Réserver" onclick="estconnecter()"> 
         <input id="effacer" type="reset" value="Effacer" >
-        <button id="ajoutPanier" onclick=" estconnecter(),AjoutPanier()">Ajouter au panier</button>
+        <button id="ajoutPanier" onclick="AjoutPanier()">Ajouter au panier</button>
 
     </form>
     <br>
